# sentinelforge

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  ANALYST_OVERRIDE_SUMMARY.md  API_KEY_DIALOG_FIX_FINAL.md  API_KEY_DIALOG_FIX_FINAL_SUMMARY.md  API_KEY_FRONTEND_FIX_SUMMARY.md  API_KEY_IMPLEMENTATION_SUMMARY.md  AUDIT_LOGGING_IMPLEMENTATION.md  AUDIT_SYSTEM_SUMMARY.md  DEMO_FEEDS_SETUP_GUIDE.md  Dockerfile  FEED_HEALTH_MONITORING_GUIDE.md  FEED_REQUIREMENTS.md  IOC_CRUD_IMPLEMENTATION_SUMMARY.md  Makefile  README.md  README_ML.md  THREAT_FEED_URL_IMPORT_REPORT.md  alerts_timeline_api.py  api_server.py  audit_demo.html  auth.py  authenticate_and_test.js  check-services.sh  conftest.py  convert_docs.py  cors-test.html  craco.config.js  create_test_user.py  debug_dialog_issue.js  debug_ingestion_validation.py  debug_upload_endpoint.py  demo_rbac_system.py  demo_role_management.py  demo_test.py  email_service.py  explain_ioc.py  explain_simple.py  (+65 more)
.github/hooks/: README.md  pre-push
.github/workflows/: ci.yml  ingest.yml  pr-tests.yml  ui-checks.yml
config/: scheduler_config.py
dashboard/: app.py
dashboard/templates/: base.html  index.html
docs/: ANALYST_GUIDE.md  EXPLANATIONS.md  FEED_HEALTH_API.md  PASSWORD_RESET_GUIDE.md  PRD.md  RBAC_RULES.md  ROLE_MANAGEMENT.md  SCHEDULER_README.md  SENDGRID_SETUP.md  STARTUP_GUIDE.md  Stakeholder-Notes.md  Technical-Research.md  ml_scoring_guide.md
email_templates/: password_reset.html
examples/: fastapi_app_with_scheduler.py  flask_app_with_scheduler.py
feeds/: sample_threat_feed.csv  sample_threat_feed.json  sample_threat_feed.txt
feeds/demo/: demo_abuse_ch_urlhaus_malware_urls.csv  demo_emerging_threats_compromised_ips.txt  demo_ipsum_threat_intelligence.txt  demo_malwaredomainlist_domains.txt  demo_mitre_att_ck_stix_feed.json
models/: ioc_scorer.joblib
scripts/: clean_pycache.py  demo_role_management_quick.py  health_check_cron.py  install_scheduler.sh  pytest_clean_cache.py  rebuild_dependencies.sh  run_scheduler.py  seed_feeds.py  sentinelforge-scheduler.service  test_feed_health.py
sentinelforge/: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  __main__.py  config.py  ingest_log.txt  ml_scoring_review.md  scoring.py  settings.py  storage.py
sentinelforge-ui/: .babelrc  .npmrc  README.md  cookies.txt  craco.config.js  package-lock.json  package.json  spa-server.py  tailwind.config.js  tsconfig.json
sentinelforge-ui/public/: manifest.json
sentinelforge-ui/src/: App.tsx  index.css  setupProxy.js
sentinelforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sentinelforge/api/: __init__.py  auth.py  export.py  taxii.py
sentinelforge/cli/: __init__.py  dashboard.py
sentinelforge/docs/: PRD.md  README.md
sentinelforge/enrichment/: __init__.py  nlp_summarizer.py  whois_geoip.py
sentinelforge/feeds/: sample.csv
sentinelforge/ingestion/: README.md  __init__.py  abuse_ch_ingestor.py  api.py  csv_ingestor.py  dummy_ingestor.py  factory.py  json_ingestor.py  main.py  normalize.py  taxii_ingestor.py  threat_intel_ingestor.py  urlhaus_ingestor.py
sentinelforge/ml/: __init__.py  explainer.py  scoring_model.py  shap_explainer.py
sentinelforge/notifications/: __init__.py  email_digest.py  slack_notifier.py
sentinelforge/tests/: conftest.py  test_export.py
sentinelforge/visualizations/: __init__.py
services/: __init__.py  background_tasks.py  feed_health_monitor.py  ingestion.py  scheduled_importer.py
src/: App.tsx
src/components/: IocDetailModal.tsx
src/pages/: Dashboard.tsx
temp_backup/: convert_docs.py
temp_backup/docs/: Stakeholder-Notes.md
tests/: conftest.py  test_api_alert_iocs.py  test_api_alerts.py  test_enhanced_explanation.py  test_export.py  test_feed_health.py  test_ingestion.py  test_mixed_iocs.py  test_role_management_api.py  test_scheduled_importer.py  test_slack_notifier.py  test_slack_notifier_main.py  test_taxii.py  test_taxii_main.py
tests/fixtures/: sample_connectors.csv  sample_connectors.json
tests/test_cli/: test_dashboard.py
tests/test_enrichment/: test_nlp_summarizer.py  test_whois_geoip.py
tests/test_ingestion/: test_api.py  test_connectors.py
tests/test_ml/: test_comprehensive_scoring.py  test_integrated_scoring.py  test_model_training.py  test_scoring_model.py  test_scoring_model_main.py
ui/: .eslintignore  BREADCRUMB_NAVIGATION_ENHANCEMENT.md  BUTTON_ACCESSIBILITY_AUDIT.md  BUTTON_ACCESSIBILITY_DEMO.md  COLLAPSIBLE_SIDEBAR_ENHANCEMENT.md  COMPILATION_FIXES_SUMMARY.md  LIGHT_MODE_IMPLEMENTATION.md  README.md  SERVER_GUIDE.md  SETTINGS_PAGE_DOCUMENTATION.md  SETTINGS_TABS_REFACTOR.md  health-check.sh  package-lock.json  package.json  postcss.config.js  server-manager.sh  simple-spa-server.py  spa-server.py  start-dev.sh  tailwind.config.js  test-api.js  test-breadcrumbs.tsx  test-collapsible-sidebar.tsx  test-feed-enhancements.tsx  test-settings-page.tsx  test-settings-tabs.tsx  test-sidebar-refactor.tsx  tsconfig.json  vitest.config.ts
ui/public/: alerts.html  (+1 more)
(+164 files in other folders)
